--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -10,6 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="0dp"
         android:fitsSystemWindows="true">
 
         <androidx.appcompat.widget.Toolbar
