fix background in details fragment

--- a/app/src/main/res/drawable/gradient_bc_itm.xml
+++ b/app/src/main/res/drawable/gradient_bc_itm.xml
@@ -6,5 +6,7 @@
         android:type="radial"
         android:gradientRadius="100%"
         android:startColor="#222232"
-        android:endColor="#191926" />
+        android:endColor="#191926"
+
+        />
 </shape>
