--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     </style>
 
     <style name="MyCardView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-
+        <item name="android:windowBackground">@drawable/gradient_bc_itm</item>
 
     </style>
 
