--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -5,14 +5,13 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        app:elevation="0dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:elevation="0dp">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/DetailCollapsing"
@@ -26,12 +25,12 @@
             app:expandedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Expanded"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:maxLines="2"
-            tools:title = "Message in two lines"
-            >
+            tools:title="Message in two lines">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:fitsSystemWindows="true"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/DetailPoster"
@@ -52,6 +51,7 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/gradient_bc_poster" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/DetailsToolbar"
                 android:layout_width="match_parent"
@@ -67,7 +67,6 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -76,7 +75,6 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-
             android:layout_height="match_parent">
 
             <TextView
@@ -90,9 +88,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/viewAge"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Action, Adventure, Fantasy"
-
-                />
+                tools:text="Action, Adventure, Fantasy" />
 
             <View
                 android:id="@+id/viewAge"
@@ -114,7 +110,6 @@
                 app:layout_constraintTop_toTopOf="@+id/viewAge"
                 tools:text="13+" />
 
-
             <com.example.myapplication.custom_raiting_bar.RatingBarSvg
                 android:id="@+id/DetailStars"
                 android:layout_width="wrap_content"
@@ -135,7 +130,6 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/DetailTags" />
 
-
             <TextView
                 android:id="@+id/DetailReview"
                 style="@style/DetailTextReview"
@@ -146,9 +140,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/DetailStars"
                 app:layout_constraintStart_toEndOf="@+id/DetailStars"
                 app:layout_constraintTop_toTopOf="@+id/DetailStars"
-                tools:text="125 Reviews"
-
-                />
+                tools:text="125 Reviews" />
 
             <TextView
                 android:id="@+id/DetailStoryline"
@@ -161,7 +153,6 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/DetailReview" />
 
-
             <TextView
                 android:id="@+id/DetailOverview"
                 style="@style/DetailTextOverview"
@@ -171,7 +162,6 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/DetailStoryline"
-
                 tools:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe." />
 
             <TextView
@@ -195,7 +185,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
-
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
                 android:layout_width="wrap_content"
@@ -203,14 +192,12 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_end="16dp" />
 
-
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_begin="16dp" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
