--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="4dp"
     android:layout_marginStart="4dp"
-    >
+    android:layout_marginEnd="4dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ActorPhoto"
         android:layout_width="@dimen/actor_size"
         android:layout_height="0dp"
+        android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:scaleType="centerCrop"
-        tools:srcCompat="@tools:sample/avatars"
-
-        app:shapeAppearanceOverlay = "@style/ShapeAppearanceOverlay"
-        />
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/ActorName"
