--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorPrimaryDark">@color/colorPrimary</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="statusBarBackground">@android:color/transparent</item>
-        <item name="materialCardViewStyle">@style/MyCardView</item>
-        <item name="fontFamily">sans-serif</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-    </style>
+    <!-- Base application theme. --><style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <item name="colorPrimaryDark">@color/colorPrimary</item>
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="statusBarBackground">@android:color/transparent</item>
+    <item name="materialCardViewStyle">@style/MyCardView</item>
+    <item name="fontFamily">sans-serif</item>
+    <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+</style>
 
     <style name="MyCardView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:windowBackground">@drawable/gradient_bc_itm</item>
-
     </style>
 
     <style name="DetailTextTitle">
@@ -21,13 +18,9 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">40sp</item>
         <item name="android:textAlignment">viewStart</item>
-
     </style>
 
-    <style name="DetailTags">
-
-
-    </style>
+    <style name="DetailTags"></style>
 
     <style name="DetailTextOverview">
         <item name="android:lineSpacingExtra">@dimen/DetailOverviewSpaceExtra</item>
@@ -47,6 +40,7 @@
         <item name="android:textColor">@color/cl_white</item>
         <item name="android:textSize">12sp</item>
     </style>
+
     <style name="DetailLike">
         <item name="android:layout_width">16dp</item>
         <item name="android:layout_height">16dp</item>
@@ -85,20 +79,16 @@
         <item name="android:textStyle">bold</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textAlignment">viewStart</item>
-
     </style>
 
     <style name="ItemTitle" parent="ListsTitle">
         <item name="android:textSize">14sp</item>
-
-
     </style>
 
     <style name="ShapeAppearanceOverlay" parent="">
         <item name="cornerSize">4dp</item>
         <item name="cornerFamily">rounded</item>
     </style>
-
 
     <style name="GlassRating">
         <item name="android:minHeight">10dp</item>
@@ -108,33 +98,32 @@
         <item name="android:progressDrawable">@drawable/rating_bar_bg</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
     <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@android:color/transparent</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/colorPrimary</item>
     </style>
+
     <style name="AppTheme2.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="TextAppearance.MyApp.Title.Collapsed" parent="DetailTextTitle">
-
         <item name="android:textSize">18sp</item>
     </style>
 
     <style name="TextAppearance.MyApp.Title.Expanded" parent="DetailTextTitle">
-
         <item name="android:lineSpacingExtra">20sp</item>
     </style>
 
     <style name="ItemTextReview" parent="DetailTextReview">
         <item name="android:textSize">8sp</item>
         <item name="android:layout_marginStart">6dp</item>
-
     </style>
 </resources>
