--- a/app/src/main/res/drawable/gradient_bc_itm.xml
+++ b/app/src/main/res/drawable/gradient_bc_itm.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:centerX="0.3"
+    <gradient android:centerX="0.3"
         android:centerY="0.3"
-        android:type="radial"
+        android:endColor="#191926"
         android:gradientRadius="100%"
         android:startColor="#222232"
-        android:endColor="#191926"
-
-        />
+        android:type="radial"/>
 </shape>
