--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -38,7 +38,7 @@
                     android:layout_height="0dp"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
-                    app:layout_constraintDimensionRatio="@string/DetailsRationPoster"
+                    app:layout_constraintDimensionRatio="@string/detailsRationPoster"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
                     tools:src="@drawable/orig"/>
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
-                android:textColor="@color/cl_red"
+                android:textColor="@color/clRed"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/viewAge"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
@@ -117,11 +117,11 @@
                 android:layout_marginTop="8dp"
                 android:isIndicator="true"
                 android:numStars="5"
-                android:progressBackgroundTint="@color/cl_grey"
+                android:progressBackgroundTint="@color/clGrey"
                 android:progressDrawable="@drawable/ratingbar_svg_selector"
-                android:progressTint="@color/cl_red"
+                android:progressTint="@color/clRed"
                 android:rating="0"
-                android:secondaryProgressTint="@color/cl_grey"
+                android:secondaryProgressTint="@color/clGrey"
                 android:stepSize="1"
                 app:drawableHeight="16dp"
                 app:drawableWidth="16dp"
@@ -148,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@string/storyline"
-                android:textColor="@color/cl_white"
+                android:textColor="@color/clWhite"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/DetailReview"/>
@@ -158,7 +158,7 @@
                 style="@style/DetailTextOverview"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/DetailOverviewTop"
+                android:layout_marginTop="@dimen/detailOverviewTop"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/DetailStoryline"
@@ -170,7 +170,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@string/cast"
-                android:textColor="@color/cl_white"
+                android:textColor="@color/clWhite"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/DetailOverview"/>
