--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="@string/movies_list"
+                    android:text="@string/moviesList"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
