--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="leftnargin_star">3dp</dimen>
-    <dimen name="actor_size">80dp</dimen>
+    <dimen name="leftMarginStar">3dp</dimen>
+    <dimen name="actorSize">80dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="marginBottomDetailREcycler">8dp</dimen>
     <dimen name="marginTopDetailRecycler">7dp</dimen>
-    <dimen name="DetailOverviewSpaceExtra">6sp</dimen>
-    <dimen name="DetailOverviewTop">4dp</dimen>
-    <dimen name="SizeViewAge">24dp</dimen>
-    <dimen name="LikeSize">16dp</dimen>
+    <dimen name="detailOverviewSpaceExtra">6sp</dimen>
+    <dimen name="detailOverviewTop">4dp</dimen>
+    <dimen name="sizeViewAge">24dp</dimen>
+    <dimen name="likeSize">16dp</dimen>
     <dimen name="marginForLike">13dp</dimen>
 </resources>
