--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -110,7 +110,7 @@
                 app:layout_constraintTop_toTopOf="@+id/viewAge"
                 tools:text="13+"/>
 
-            <com.example.myapplication.custom_raiting_bar.RatingBarSvg
+            <com.example.movietracker.custom_raiting_bar.RatingBarSvg
                 android:id="@+id/DetailStars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
