--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -63,7 +63,7 @@
             app:layout_constraintTop_toTopOf="@+id/viewAge"
             tools:text="13+"/>
 
-        <com.example.movietracker.custom_raiting_bar.RatingBarSvg
+        <com.github.movietracker.custom_raiting_bar.RatingBarSvg
             android:id="@+id/ListsStars"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
